--- a/authors_quotes/quoteapp/static/quoteapp/style.css
+++ b/authors_quotes/quoteapp/static/quoteapp/style.css
@@ -5,3 +5,11 @@
 .alert-success {
     color: green;
 }
+
+#spinner {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+}
