--- a/authors_quotes/quoteapp/templates/quoteapp/index.html
+++ b/authors_quotes/quoteapp/templates/quoteapp/index.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Quotes</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 <!--    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"/>-->
+
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
+    <!-- Bootstrap JavaScript Dependencies -->
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
+
+    <script src="static/quoteapp/spinner.js"></script>
+    <style>
+        #spinner {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
 <body>
+<!-- Add spinner HTML -->
+<div id="spinner" class="spinner-grow text-primary" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
+
+<!-- Add alert HTML -->
+<div id="alertContainer"></div>
+
 <main class="container">
 <nav style="margin-bottom: 20px; border-bottom: 2px solid; padding-left: 30px">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
@@ -18,16 +49,17 @@
             <ul class="navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="{% url 'quoteapp:author' %}">Add Author <span
-                        class="sr-only">(current)</span></a>
+                        class="sr-only"></span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'quoteapp:quote' %}">Add Quote <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'quoteapp:quote' %}">Add Quote <span class="sr-only"></span></a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="{% url 'quoteapp:tag' %}">Add Tag</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'quoteapp:scrape_info' %}">Scrape Data</a>
+                  <button onclick="makeAPICall()" type="button"
+                          class="btn btn-light">Scrape Data</button>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
@@ -47,15 +79,6 @@
 </nav>
 
 {% if quotes %}
-
-    {% for msg in messages %}
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Hey </strong> {{ msg }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    {% endfor %}
 
 <ul>
     {% for quote in quotes %}
