--- a/authors_quotes/quoteapp/templates/quoteapp/quote.html
+++ b/authors_quotes/quoteapp/templates/quoteapp/quote.html
@@ -8,6 +8,7 @@
     <label for="quote">Quote</label>
     <input type="text" class="form-control" id="quote"
            aria-describedby="quoteHelp" placeholder="Quote" name="quote">
+    <span>{{ form.errors.quote }}</span>
   </div>
     <div class="form-group">
     <label for="tags">Select Tags</label>
@@ -16,6 +17,7 @@
             <option value="{{tag.name}}">{{tag.name}}</option>
         {% endfor %}
     </select>
+    <span>{{ form.errors.tags }}</span>
 </div>
     <div class="form-group">
         <label> Select Authors
@@ -24,6 +26,7 @@
                 <option value="{{author.fullname}}">{{author.fullname}}</option>
                 {% endfor %}
             </select>
+            <span>{{ form.errors.authors }}</span>
         </label>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
