--- a/authors_quotes/quoteapp/templates/quoteapp/tag.html
+++ b/authors_quotes/quoteapp/templates/quoteapp/tag.html
@@ -8,6 +8,7 @@
     <label for="tag_name">Tag Name</label>
     <input type="text" class="form-control" id="tag_name"
            aria-describedby="tagHelp" placeholder="Tag Name" name="name">
+    <span>{{ form.errors.name }}</span>
   </div>
     <div class="grid">
       <button type="submit" class="btn btn-primary">Submit</button>
